cmake_minimum_required(VERSION 2.7)

project(clase2 C)

set(CMAKE_BUILD_TYPE DEBUG)

add_executable(punteros punteros.c)
add_executable(wedding wedding.c)
add_executable(numeromayor numeromayor.c)
add_executable(decimalabinario decimalabinario.c)
add_executable(palindromo palindromo.c)
add_executable(transpuesta transpuesta.c)
add_executable(triangulo triangulo.c)
add_executable(busqueda busqueda.c)
add_executable(hanoi hanoi.c)