cmake_minimum_required(VERSION 2.7)

project(practica C)

add_executable(pair pair.c)
add_executable(letter letter.c)
add_executable(apples apples.c)
add_executable(circular circular.c)
add_executable(castle castle.c)
add_executable(nikita nikita.c)
add_executable(clouds clouds.c)
add_executable(sherlock sherlock.c)